more imgs and codes

--- a/notebooks/explore manifold using FR tsne and umap/dimension reduction layout.ipynb
+++ b/notebooks/explore manifold using FR tsne and umap/dimension reduction layout.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-16T15:11:05.277934Z",
-     "start_time": "2024-09-16T15:10:59.349802Z"
+     "end_time": "2024-09-17T12:20:49.592064Z",
+     "start_time": "2024-09-17T12:20:44.258224Z"
     }
    },
    "source": [
@@ -33,25 +33,25 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T15:11:05.385500Z",
-     "start_time": "2024-09-16T15:11:05.279928Z"
+     "end_time": "2024-09-17T12:23:24.814887Z",
+     "start_time": "2024-09-17T12:23:24.726184Z"
     }
    },
    "cell_type": "code",
    "source": [
     "img = load_image('ADF2_27.dm4')\n",
-    "pts = np.load('Co 3 pts.npy')\n",
+    "original_pts = np.load('Co 3 pts.npy')\n",
     "lbs = np.load('Co 3 lbs.npy').astype(int)"
    ],
    "id": "f77c352da5f537d",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T15:11:05.415515Z",
-     "start_time": "2024-09-16T15:11:05.386496Z"
+     "end_time": "2024-09-17T12:30:22.390758Z",
+     "start_time": "2024-09-17T12:30:22.361846Z"
     }
    },
    "cell_type": "code",
@@ -60,31 +60,61 @@
     "    img = resize(img, (1024, 1024), order=0)\n",
     "img = normalize_image(img)\n",
     "# mask1 = np.logical_or(lbs==0, lbs==1)\n",
-    "mask1 = lbs==0\n",
+    "# mask1 = lbs==0\n",
     "mask2 = np.logical_or(lbs==2, lbs==3)\n",
+    "mask1 = np.logical_or(lbs==0, lbs==1)\n",
     "size = 29"
    ],
    "id": "53d2587904fd2095",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T15:11:05.536970Z",
-     "start_time": "2024-09-16T15:11:05.465854Z"
+     "end_time": "2024-09-17T12:30:26.015662Z",
+     "start_time": "2024-09-17T12:30:25.956270Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "kp = KeyPoints(pts, img, size)\n",
-    "ps = kp.extract_patches(size)\n",
-    "zps = ZPs(n_max=12, size=ps.shape[1])\n",
-    "moments = zps.fit_transform(ps)"
+    "kp = KeyPoints(original_pts, img, size)\n",
+    "original_ps = kp.extract_patches(size)\n",
+    "zps = ZPs(n_max=12, size=original_ps.shape[1])\n",
+    "moments = zps.fit_transform(original_ps)"
    ],
    "id": "807622f8d3fc2347",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T12:33:12.537401Z",
+     "start_time": "2024-09-17T12:33:12.510498Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "pts = original_pts[mask1]\n",
+    "ps = original_ps[mask1]"
+   ],
+   "id": "29fb8dc1150df2c7",
+   "outputs": [],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T12:31:13.770568Z",
+     "start_time": "2024-09-17T12:31:13.756615Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "Se2_lbs = lbs[mask1]",
+   "id": "85b5060eba0d8f0d",
+   "outputs": [],
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -95,28 +125,28 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T15:11:05.551914Z",
-     "start_time": "2024-09-16T15:11:05.537960Z"
+     "end_time": "2024-09-17T12:31:15.786620Z",
+     "start_time": "2024-09-17T12:31:15.773663Z"
     }
    },
    "cell_type": "code",
    "source": "tsne_X1 = X1 = (moments.data)[mask1][:, 1:]",
    "id": "e2830f245e199c2a",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T15:11:16.410412Z",
-     "start_time": "2024-09-16T15:11:05.553907Z"
+     "end_time": "2024-09-17T12:31:24.158875Z",
+     "start_time": "2024-09-17T12:31:16.543862Z"
     }
    },
    "cell_type": "code",
    "source": "tsne_res = tsne(n_components=2).fit_transform(tsne_X1)",
    "id": "7a7682a08f891603",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 22
   },
   {
    "metadata": {
@@ -684,8 +714,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T15:15:07.805345Z",
-     "start_time": "2024-09-16T15:15:07.790394Z"
+     "end_time": "2024-09-17T12:21:19.879852Z",
+     "start_time": "2024-09-17T12:21:19.866887Z"
     }
    },
    "cell_type": "code",
@@ -740,23 +770,7 @@
    ],
    "id": "a64c2542c139e0da",
    "outputs": [],
-   "execution_count": 10
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-16T15:15:04.373655Z",
-     "start_time": "2024-09-16T15:15:04.345243Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "pts = pts[mask1]\n",
-    "ps = ps[mask1]"
-   ],
-   "id": "c963ed372fb4cad6",
-   "outputs": [],
-   "execution_count": 9
+   "execution_count": 7
   },
   {
    "metadata": {
@@ -912,6 +926,441 @@
     }
    ],
    "execution_count": 17
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "bff46be4459cce85"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T12:36:10.077904Z",
+     "start_time": "2024-09-17T12:36:10.070927Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "from sklearn.neighbors import NearestNeighbors",
+   "id": "8fd3ddfa869cd85a",
+   "outputs": [],
+   "execution_count": 28
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T12:32:38.109487Z",
+     "start_time": "2024-09-17T12:32:38.104505Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "Se2_lbs.shape,tsne_res.shape",
+   "id": "8b2e602393957a2e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((4200,), (4200, 2))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T12:43:40.689616Z",
+     "start_time": "2024-09-17T12:43:31.266277Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "pts1 = pts[Se2_lbs == 0]#Se2 positions\n",
+    "pts2 = pts[Se2_lbs == 1]#Vacancy positions\n",
+    "\n",
+    "X11 = tsne_X1[Se2_lbs == 0]\n",
+    "X12 = tsne_X1[Se2_lbs == 1]\n",
+    "\n",
+    "tsne_res = tsne(n_components=2).fit_transform(X11)"
+   ],
+   "id": "8458951619dfff18",
+   "outputs": [],
+   "execution_count": 31
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T12:43:43.407105Z",
+     "start_time": "2024-09-17T12:43:43.401126Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "tsne_res.shape,pts1.shape,pts2.shape",
+   "id": "e0cb6d60db7f384a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((4114, 2), (4114, 2), (86, 2))"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T12:45:26.911206Z",
+     "start_time": "2024-09-17T12:45:26.883307Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "nn = NearestNeighbors(n_neighbors=2)\n",
+    "nn.fit(pts1)\n",
+    "\n",
+    "distances, indices = nn.kneighbors(pts1)\n",
+    "nearest_distances = distances[:, 1]\n",
+    "average_distance = np.mean(nearest_distances)\n",
+    "radius = int(average_distance*1.3)\n",
+    "print(\"Radius of further points nearest neighbor:\", radius)"
+   ],
+   "id": "2c521e91982abbea",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Radius of further points nearest neighbor: 19\n"
+     ]
+    }
+   ],
+   "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T13:30:43.670435Z",
+     "start_time": "2024-09-17T13:30:43.660469Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def sort_pts(pts,p):\n",
+    "    vectors = pts - p\n",
+    "    angles = np.arctan2(vectors[:, 1], vectors[:, 0])\n",
+    "    sorted_indices = np.argsort(angles)\n",
+    "    return sorted_indices"
+   ],
+   "id": "12ad7d65f8ab29b9",
+   "outputs": [],
+   "execution_count": 56
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T13:45:10.034700Z",
+     "start_time": "2024-09-17T13:45:08.980820Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "select_pts1 = []\n",
+    "select_theta1 = []\n",
+    "angles = np.arctan2(tsne_res[:, 1], tsne_res[:, 0])\n",
+    "nn = NearestNeighbors(radius=radius)\n",
+    "nn.fit(pts1)\n",
+    "neighbor_limit = 7\n",
+    "for i,p in enumerate(pts1):\n",
+    "    distances, indices = nn.radius_neighbors([p])\n",
+    "\n",
+    "    if i in indices[0]:\n",
+    "        indices = indices[0][indices[0] != i]\n",
+    "        distances = distances[0][distances[0] != i]\n",
+    "\n",
+    "    if len(indices) >= neighbor_limit - 1:\n",
+    "        select_pts = pts1[indices]\n",
+    "        select_angles = angles[indices]\n",
+    "        sort_idx = sort_pts(select_pts,p)\n",
+    "        sort_angles = select_angles[sort_idx]\n",
+    "        diffs = np.diff(sort_angles)\n",
+    "        result = np.append(diffs,  sort_angles[-1] - sort_angles[0])\n",
+    "        select_pts1.append(p)\n",
+    "        select_theta1.append(result)\n",
+    "select_pts1 = np.array(select_pts1)\n",
+    "select_theta1 = np.array(select_theta1)"
+   ],
+   "id": "5c48076b17f6b4fa",
+   "outputs": [],
+   "execution_count": 87
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T13:45:35.231753Z",
+     "start_time": "2024-09-17T13:45:35.173647Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "select_pts2 = []\n",
+    "select_theta2 = []\n",
+    "neighbor_limit = 6\n",
+    "for i,p in enumerate(pts2):\n",
+    "    distances, indices = nn.radius_neighbors([p])\n",
+    "    \n",
+    "    indices = indices[0]\n",
+    "    distances = distances[0]\n",
+    "\n",
+    "    if len(indices) >= neighbor_limit:\n",
+    "        select_pts = pts1[indices]\n",
+    "        select_angles = angles[indices]\n",
+    "        sort_idx = sort_pts(select_pts,p)\n",
+    "        sort_angles = select_angles[sort_idx]\n",
+    "        diffs = np.diff(sort_angles)\n",
+    "        result = np.append(diffs,  sort_angles[-1] - sort_angles[0])\n",
+    "        select_pts2.append(p)\n",
+    "        select_theta2.append(result)\n",
+    "select_pts2 = np.array(select_pts2)\n",
+    "select_theta2 = np.array(select_theta2)"
+   ],
+   "id": "42180bcf5faa1747",
+   "outputs": [],
+   "execution_count": 89
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T13:59:54.193064Z",
+     "start_time": "2024-09-17T13:59:54.188077Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "mean_theta1 = np.mean(select_theta1,axis = 1)\n",
+    "mean_theta2 = np.mean(select_theta2,axis = 1)"
+   ],
+   "id": "758fbf2d778e55bd",
+   "outputs": [],
+   "execution_count": 104
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T14:03:08.406968Z",
+     "start_time": "2024-09-17T14:03:08.394008Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "mean_theta = np.hstack([mean_theta1,mean_theta2])\n",
+    "all_pts = np.vstack([select_pts1,select_pts2])"
+   ],
+   "id": "230d313304f2c183",
+   "outputs": [],
+   "execution_count": 108
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T14:06:57.036326Z",
+     "start_time": "2024-09-17T14:06:57.024359Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "norm_theta = mean_theta-mean_theta.min()\n",
+    "norm_theta = norm_theta/norm_theta.max()"
+   ],
+   "id": "ed09ec37b0b92f56",
+   "outputs": [],
+   "execution_count": 113
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T14:13:06.271774Z",
+     "start_time": "2024-09-17T14:13:06.257820Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "new_cmap = plt.get_cmap('coolwarm')(norm_theta)",
+   "id": "65ebf6dd36fc189a",
+   "outputs": [],
+   "execution_count": 122
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T14:13:16.259362Z",
+     "start_time": "2024-09-17T14:13:14.368364Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fig,ax = plt.subplots(1,1,figsize=(7.2,7.2))\n",
+    "ax.imshow(img,cmap = 'gray')\n",
+    "ax.scatter(all_pts[:,0],all_pts[:,1],c = new_cmap,s = 7)\n",
+    "ax.axis('off')\n",
+    "plt.savefig('delta theta coolwarm cmap.png',dpi = 700,transparent = True)"
+   ],
+   "id": "96a555e2651e5f23",
+   "outputs": [],
+   "execution_count": 123
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T14:05:45.327322Z",
+     "start_time": "2024-09-17T14:05:45.243756Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fig,ax = plt.subplots(1,1)\n",
+    "ax.hist(norm_theta,bins=100,color = 'blue')"
+   ],
+   "id": "c3aa364eba50068c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 3.,  5., 11.,  8.,  9., 10.,  8., 11., 10.,  9., 20., 12., 20.,\n",
+       "        16., 16., 21., 24., 13., 22., 21., 16., 21., 28., 29., 34., 28.,\n",
+       "        30., 26., 30., 35., 49., 37., 40., 44., 43., 46., 49., 55., 61.,\n",
+       "        49., 59., 49., 76., 54., 68., 65., 75., 79., 92., 90., 85., 95.,\n",
+       "        65., 85., 64., 73., 52., 59., 72., 68., 63., 54., 54., 67., 57.,\n",
+       "        50., 49., 39., 33., 44., 44., 36., 37., 25., 27., 15., 21., 21.,\n",
+       "        19., 24., 20., 24., 20., 11., 14., 16., 14., 12., 16., 14.,  9.,\n",
+       "        17.,  8., 12.,  8.,  8., 10.,  7.,  4.,  2.]),\n",
+       " array([0.        , 0.01993667, 0.03987333, 0.05981   , 0.07974666,\n",
+       "        0.09968333, 0.11962   , 0.13955666, 0.15949333, 0.17942999,\n",
+       "        0.19936666, 0.21930332, 0.23923999, 0.25917667, 0.27911332,\n",
+       "        0.29905   , 0.31898665, 0.33892334, 0.35885999, 0.37879667,\n",
+       "        0.39873332, 0.41867   , 0.43860665, 0.45854333, 0.47847998,\n",
+       "        0.49841666, 0.51835334, 0.53829002, 0.55822664, 0.57816333,\n",
+       "        0.59810001, 0.61803669, 0.63797331, 0.65790999, 0.67784667,\n",
+       "        0.69778335, 0.71771997, 0.73765665, 0.75759333, 0.77753001,\n",
+       "        0.79746664, 0.81740332, 0.83734   , 0.85727668, 0.8772133 ,\n",
+       "        0.89714998, 0.91708666, 0.93702334, 0.95695996, 0.97689664,\n",
+       "        0.99683332, 1.01677001, 1.03670669, 1.05664337, 1.07658005,\n",
+       "        1.09651661, 1.11645329, 1.13638997, 1.15632665, 1.17626333,\n",
+       "        1.19620001, 1.21613669, 1.23607337, 1.25600994, 1.27594662,\n",
+       "        1.2958833 , 1.31581998, 1.33575666, 1.35569334, 1.37563002,\n",
+       "        1.3955667 , 1.41550326, 1.43543994, 1.45537663, 1.47531331,\n",
+       "        1.49524999, 1.51518667, 1.53512335, 1.55506003, 1.57499671,\n",
+       "        1.59493327, 1.61486995, 1.63480663, 1.65474331, 1.67467999,\n",
+       "        1.69461668, 1.71455336, 1.73449004, 1.7544266 , 1.77436328,\n",
+       "        1.79429996, 1.81423664, 1.83417332, 1.85411   , 1.87404668,\n",
+       "        1.89398336, 1.91391993, 1.93385661, 1.95379329, 1.97372997,\n",
+       "        1.99366665]),\n",
+       " <BarContainer object of 100 artists>)"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 112
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T13:49:28.349384Z",
+     "start_time": "2024-09-17T13:49:28.295564Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fig,ax = plt.subplots(1,1)\n",
+    "ax.hist(np.mean(select_theta2,axis = 1),bins = 20)"
+   ],
+   "id": "472aa0e8586fcf0",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 2.,  3.,  1.,  3.,  1.,  4.,  4.,  5.,  5., 12., 12.,  4.,  7.,\n",
+       "         5.,  2.,  0.,  1.,  2.,  1.,  2.]),\n",
+       " array([-1.85589659, -1.66556358, -1.47523069, -1.28489769, -1.09456468,\n",
+       "        -0.90423179, -0.71389878, -0.52356583, -0.33323285, -0.14289989,\n",
+       "         0.04743308,  0.23776604,  0.42809901,  0.61843199,  0.80876493,\n",
+       "         0.99909794,  1.18943083,  1.37976384,  1.57009685,  1.76042974,\n",
+       "         1.95076275]),\n",
+       " <BarContainer object of 20 artists>)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 100
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T13:45:46.553740Z",
+     "start_time": "2024-09-17T13:45:46.474015Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fig, ax = plt.subplots(1,1)\n",
+    "ax.imshow(img,cmap = 'gray')\n",
+    "for p1 in pts1[indices]:\n",
+    "    ax.scatter(p1[0],p1[1],color = 'red',s = 7)\n",
+    "ax.scatter(p[0],p[1],color = 'b',s = 7)"
+   ],
+   "id": "3f46997170cf094a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x1792b38dd50>"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 91
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T13:42:02.775392Z",
+     "start_time": "2024-09-17T13:42:02.768416Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "pts1.shape",
+   "id": "c91834a67cbe0659",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4114, 2)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 76
   }
  ],
  "metadata": {
