--- a/notebooks/figure files/figure 4b/figure 4b plot.ipynb
+++ b/notebooks/figure files/figure 4b/figure 4b plot.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-03T15:52:35.662247Z",
-     "start_time": "2024-09-03T15:52:35.100295Z"
+     "end_time": "2024-09-18T07:45:23.627277Z",
+     "start_time": "2024-09-18T07:45:23.612285Z"
     }
    },
    "source": [
@@ -15,31 +15,49 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib qt"
    ],
-   "execution_count": 1,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-03T15:52:35.678194Z",
-     "start_time": "2024-09-03T15:52:35.664240Z"
+     "end_time": "2024-09-18T07:45:40.573578Z",
+     "start_time": "2024-09-18T07:45:40.559623Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "exp_mean_dist = np.load('4b exp mean dist.npy')\n",
-    "exp_std_dist = np.load('4b exp std dist.npy')\n",
-    "rdm_mean_dist = np.load('4b rdm mean dist.npy')"
+    "Ti_dist_Data = np.load('Ti_dist_Data.npy')\n",
+    "V_dist_Data = np.load('V_dist_Data.npy')\n",
+    "Mn_dist_Data = np.load('Mn_dist_Data.npy')\n",
+    "Co_dist_Data = np.load('Co_dist_Data.npy')"
    ],
-   "id": "adab7896b1a49824",
-   "execution_count": 2,
-   "outputs": []
+   "id": "6b13fc5624804c7a",
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-03T15:52:53.192758Z",
-     "start_time": "2024-09-03T15:52:52.389554Z"
+     "end_time": "2024-09-18T07:50:19.600945Z",
+     "start_time": "2024-09-18T07:50:19.592970Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "exp_mean_dist = [np.mean(Ti_dist_Data),np.mean(V_dist_Data),np.mean(Mn_dist_Data),np.mean(Co_dist_Data)]\n",
+    "exp_std_dist = [np.std(Ti_dist_Data),np.std(V_dist_Data),np.std(Mn_dist_Data),np.std(Co_dist_Data)]\n",
+    "rdm_mean_dist = np.load('4b rdm mean dist.npy')"
+   ],
+   "id": "adab7896b1a49824",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-18T07:50:30.931914Z",
+     "start_time": "2024-09-18T07:50:30.386491Z"
     }
    },
    "cell_type": "code",
@@ -58,8 +76,8 @@
     "plt.savefig('fig 4b New Average Distance.png',dpi = 700,transparent=True)"
    ],
    "id": "7ac476b7d1dbbe27",
-   "execution_count": 4,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 13
   },
   {
    "metadata": {},
