--- a/notebooks/figure files/figure 4c/figure 4c plot.ipynb
+++ b/notebooks/figure files/figure 4c/figure 4c plot.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-09T08:32:06.070909Z",
-     "start_time": "2024-09-09T08:32:05.669463Z"
+     "end_time": "2024-09-18T07:52:39.012570Z",
+     "start_time": "2024-09-18T07:52:38.657355Z"
     }
    },
    "source": [
@@ -21,8 +21,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T08:32:06.087043Z",
-     "start_time": "2024-09-09T08:32:06.071911Z"
+     "end_time": "2024-09-18T07:52:39.027037Z",
+     "start_time": "2024-09-18T07:52:39.014097Z"
     }
    },
    "cell_type": "code",
@@ -40,30 +40,31 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T12:02:44.743246Z",
-     "start_time": "2024-09-09T12:02:44.728298Z"
+     "end_time": "2024-09-18T08:00:49.269695Z",
+     "start_time": "2024-09-18T08:00:49.256739Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "Ti_exp_mean = np.load('Ti mean cnts.npy')\n",
-    "Ti_exp_std = np.load('Ti std cnts.npy')\n",
-    "# Ti_rdm_mean = np.load('Ti rdm mean new size.npy')\n",
-    "# Ti_rdm_std = np.load('Ti rdm std new size.npy')\n",
-    "Ti_rdm_mean_200 = np.load('rdm Ti mean size 200.npy')\n",
-    "Ti_rdm_std_200 = np.load('rdm Ti std size 200.npy')\n",
-    "Ti_rdm_mean_500 = np.load('rdm Ti mean size 500.npy')\n",
-    "Ti_rdm_std_500 = np.load('rdm Ti std size 500.npy')"
+    "Ti_cnts = np.load('Ti cnts.npy')\n",
+    "Ti_exp_mean = np.mean(Ti_cnts,axis = 0)\n",
+    "Ti_exp_std = np.std(Ti_cnts,axis = 0)\n",
+    "Ti_rdm_500_cnts = np.load('rdm Ti size 500 cnts.npy')\n",
+    "Ti_rdm_200_cnts = np.load('rdm Ti size 200 cnts.npy')\n",
+    "Ti_rdm_mean_200 = np.mean(Ti_rdm_200_cnts,axis = 0)\n",
+    "Ti_rdm_std_200 = np.std(Ti_rdm_200_cnts,axis = 0)\n",
+    "Ti_rdm_mean_500 = np.mean(Ti_rdm_500_cnts,axis = 0)\n",
+    "Ti_rdm_std_500 = np.std(Ti_rdm_500_cnts,axis = 0)"
    ],
    "id": "adab7896b1a49824",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T12:03:02.757544Z",
-     "start_time": "2024-09-09T12:03:02.058029Z"
+     "end_time": "2024-09-18T08:01:22.455785Z",
+     "start_time": "2024-09-18T08:01:21.738396Z"
     }
    },
    "cell_type": "code",
@@ -82,13 +83,13 @@
    ],
    "id": "7ac476b7d1dbbe27",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T12:03:14.973322Z",
-     "start_time": "2024-09-09T12:03:14.334210Z"
+     "end_time": "2024-09-18T08:01:23.063009Z",
+     "start_time": "2024-09-18T08:01:22.497332Z"
     }
    },
    "cell_type": "code",
@@ -107,7 +108,7 @@
    ],
    "id": "bca03e7d2f65232d",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -118,30 +119,31 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T12:03:40.795405Z",
-     "start_time": "2024-09-09T12:03:40.781442Z"
+     "end_time": "2024-09-18T08:02:40.376689Z",
+     "start_time": "2024-09-18T08:02:40.356954Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "V_exp_mean = np.load('V mean cnts.npy')\n",
-    "V_exp_std = np.load('V std cnts.npy')\n",
-    "# V_rdm_mean = np.load('V rdm mean.npy')\n",
-    "# V_rdm_std = np.load('V rdm std.npy')\n",
-    "V_rdm_mean_200 = np.load('rdm V mean size 200.npy')\n",
-    "V_rdm_std_200 = np.load('rdm V std size 200.npy')\n",
-    "V_rdm_mean_500 = np.load('rdm V mean size 500.npy')\n",
-    "V_rdm_std_500 = np.load('rdm V std size 500.npy')"
+    "V_cnts = np.load('V cnts.npy')\n",
+    "V_exp_mean = np.mean(V_cnts,axis = 0)\n",
+    "V_exp_std = np.std(V_cnts,axis = 0)\n",
+    "V_rdm_500_cnts = np.load('rdm V size 500 cnts.npy')\n",
+    "V_rdm_200_cnts = np.load('rdm V size 200 cnts.npy')\n",
+    "V_rdm_mean_200 = np.mean(V_rdm_200_cnts,axis = 0)\n",
+    "V_rdm_std_200 = np.std(V_rdm_200_cnts,axis = 0)\n",
+    "V_rdm_mean_500 = np.mean(V_rdm_500_cnts,axis = 0)\n",
+    "V_rdm_std_500 = np.std(V_rdm_500_cnts,axis = 0)"
    ],
-   "id": "27ea182302e32ecf",
+   "id": "f0f79bed3055cb4d",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T12:04:05.039846Z",
-     "start_time": "2024-09-09T12:04:04.394980Z"
+     "end_time": "2024-09-18T08:02:43.984252Z",
+     "start_time": "2024-09-18T08:02:43.328498Z"
     }
    },
    "cell_type": "code",
@@ -160,13 +162,13 @@
    ],
    "id": "235edccb707010c1",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T12:04:43.265077Z",
-     "start_time": "2024-09-09T12:04:42.594169Z"
+     "end_time": "2024-09-18T08:02:56.462827Z",
+     "start_time": "2024-09-18T08:02:55.820541Z"
     }
    },
    "cell_type": "code",
@@ -185,7 +187,7 @@
    ],
    "id": "5ab17a7fcb2cf0ac",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -196,30 +198,31 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T12:05:05.319854Z",
-     "start_time": "2024-09-09T12:05:05.298924Z"
+     "end_time": "2024-09-18T08:03:54.115804Z",
+     "start_time": "2024-09-18T08:03:54.101850Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "Mn_exp_mean = np.load('Mn mean cnts.npy')\n",
-    "Mn_exp_std = np.load('Mn std cnts.npy')\n",
-    "# Mn_rdm_mean = np.load('Mn rdm mean.npy')\n",
-    "# Mn_rdm_std = np.load('Mn rdm std.npy')\n",
-    "Mn_rdm_mean_200 = np.load('rdm Mn mean size 200.npy')\n",
-    "Mn_rdm_std_200 = np.load('rdm Mn std size 200.npy')\n",
-    "Mn_rdm_mean_500 = np.load('rdm Mn mean size 500.npy')\n",
-    "Mn_rdm_std_500 = np.load('rdm Mn std size 500.npy')"
+    "Mn_cnts= np.load('Mn cnts.npy')\n",
+    "Mn_exp_mean = np.mean(Mn_cnts,axis = 0)\n",
+    "Mn_exp_std = np.std(Mn_cnts,axis = 0)\n",
+    "Mn_rdm_500_cnts = np.load('rdm Mn size 500 cnts.npy')\n",
+    "Mn_rdm_mean_500 = np.mean(Mn_rdm_500_cnts,axis = 0)\n",
+    "Mn_rdm_std_500 = np.std(Mn_rdm_500_cnts,axis = 0)\n",
+    "Mn_rdm_200_cnts = np.load('rdm Mn size 200 cnts.npy')\n",
+    "Mn_rdm_mean_200 = np.mean(Mn_rdm_200_cnts,axis = 0)\n",
+    "Mn_rdm_std_200 = np.std(Mn_rdm_200_cnts,axis = 0)"
    ],
-   "id": "357bbd803c8976dd",
+   "id": "be9e93687b73810d",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T12:05:18.398490Z",
-     "start_time": "2024-09-09T12:05:17.671311Z"
+     "end_time": "2024-09-18T08:03:57.495196Z",
+     "start_time": "2024-09-18T08:03:56.933880Z"
     }
    },
    "cell_type": "code",
@@ -238,13 +241,13 @@
    ],
    "id": "6777cdad6b5de485",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T12:06:38.420756Z",
-     "start_time": "2024-09-09T12:06:37.714393Z"
+     "end_time": "2024-09-18T08:04:10.404283Z",
+     "start_time": "2024-09-18T08:04:09.797657Z"
     }
    },
    "cell_type": "code",
@@ -263,7 +266,7 @@
    ],
    "id": "a27ac3f3a2891fa2",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -274,30 +277,31 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T12:07:16.640388Z",
-     "start_time": "2024-09-09T12:07:16.621452Z"
+     "end_time": "2024-09-18T08:04:58.281866Z",
+     "start_time": "2024-09-18T08:04:58.267914Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "Co_exp_mean = np.load('Co mean cnts.npy')\n",
-    "Co_exp_std = np.load('Co std cnts.npy')\n",
-    "# Co_rdm_mean = np.load('Co rdm mean.npy')\n",
-    "# Co_rdm_std = np.load('Co rdm std.npy')\n",
-    "Co_rdm_mean_200 = np.load('rdm Co mean size 200.npy')\n",
-    "Co_rdm_std_200 = np.load('rdm Co std size 200.npy')\n",
-    "Co_rdm_mean_500 = np.load('rdm Co mean size 500.npy')\n",
-    "Co_rdm_std_500 = np.load('rdm Co std size 500.npy')"
+    "Co_cnts = np.load('Co cnts.npy')\n",
+    "Co_exp_mean = np.mean(Co_cnts,axis = 0)\n",
+    "Co_exp_std = np.std(Co_cnts,axis = 0)\n",
+    "Co_rdm_500_cnts = np.load('rdm Co size 500 cnts.npy')\n",
+    "Co_rdm_mean_500 = np.mean(Co_rdm_500_cnts,axis = 0)\n",
+    "Co_rdm_std_500 = np.std(Co_rdm_500_cnts,axis = 0)\n",
+    "Co_rdm_200_cnts = np.load('rdm Co size 200 cnts.npy')\n",
+    "Co_rdm_mean_200 = np.mean(Co_rdm_200_cnts,axis = 0)\n",
+    "Co_rdm_std_200 = np.std(Co_rdm_200_cnts,axis = 0)"
    ],
-   "id": "3df3d2adb0c1f9f6",
+   "id": "790fd82918dc210e",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T12:07:17.460217Z",
-     "start_time": "2024-09-09T12:07:16.776614Z"
+     "end_time": "2024-09-18T08:05:00.898670Z",
+     "start_time": "2024-09-18T08:05:00.244338Z"
     }
    },
    "cell_type": "code",
@@ -316,13 +320,13 @@
    ],
    "id": "86cb8284b46cb5ed",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T12:07:31.704120Z",
-     "start_time": "2024-09-09T12:07:31.037541Z"
+     "end_time": "2024-09-18T08:05:04.147105Z",
+     "start_time": "2024-09-18T08:05:03.472486Z"
     }
    },
    "cell_type": "code",
@@ -341,7 +345,7 @@
    ],
    "id": "e94fa3bf33c89dd5",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 20
   },
   {
    "metadata": {},
