--- a/notebooks/figure files/figure 3b/figure 3b plot.ipynb
+++ b/notebooks/figure files/figure 3b/figure 3b plot.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-09T13:29:23.035898Z",
-     "start_time": "2024-09-09T13:29:23.021941Z"
+     "end_time": "2024-09-18T07:20:10.000887Z",
+     "start_time": "2024-09-18T07:20:09.634753Z"
     }
    },
    "source": [
@@ -16,31 +16,65 @@
     "%matplotlib qt"
    ],
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T13:29:34.255689Z",
-     "start_time": "2024-09-09T13:29:34.242681Z"
+     "end_time": "2024-09-18T07:20:10.015843Z",
+     "start_time": "2024-09-18T07:20:10.001891Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "exp_ratio_mean = np.load('fig 3b exp mean.npy')\n",
-    "exp_ratio_std = np.load('fig 3b exp std.npy')\n",
+    "Ti_pair_dop_ratio = np.array([2,2,1,2,2,1,5,1.5])\n",
+    "V_pair_dop_ratio = np.array([1,1.142857143,3,3,1,2,1,2])\n",
+    "Mn_pair_dop_ratio = np.array([1,1,2,1])\n",
+    "Co_pair_dop_ratio = np.array([2,2,1,1,1,1.5,1])"
+   ],
+   "id": "ec529e6b88839385",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-18T07:20:10.031481Z",
+     "start_time": "2024-09-18T07:20:10.016522Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "exp_ratio_mean = np.array([np.mean(Ti_pair_dop_ratio),np.mean(V_pair_dop_ratio),np.mean(V_pair_dop_ratio),np.mean(Co_pair_dop_ratio)])\n",
+    "exp_ratio_std = np.array([np.std(Ti_pair_dop_ratio),np.std(V_pair_dop_ratio),np.std(Mn_pair_dop_ratio),np.std(Co_pair_dop_ratio)])"
+   ],
+   "id": "cf430fa89af4f226",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-18T07:20:10.992885Z",
+     "start_time": "2024-09-18T07:20:10.982918Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# exp_ratio_mean = np.load('fig 3b exp mean.npy')\n",
+    "# exp_ratio_std = np.load('fig 3b exp std.npy')\n",
     "rdm_ratio = np.load('3b rdm ratio.npy')\n",
     "X_positions = [1,1.5,2,2.5]"
    ],
    "id": "d6df3712978d9ce9",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T13:32:25.165023Z",
-     "start_time": "2024-09-09T13:32:24.522087Z"
+     "end_time": "2024-09-18T07:20:16.091797Z",
+     "start_time": "2024-09-18T07:20:15.912391Z"
     }
    },
    "cell_type": "code",
@@ -67,8 +101,19 @@
     "plt.savefig('fig 3b Multi-pair dopants ratio.png',dpi = 700,transparent=True)"
    ],
    "id": "195369998a7034a8",
-   "outputs": [],
-   "execution_count": 15
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text(0.5, 1.0, 'The Ratio of Multi Pair Vac-Dopant to Paired Dopants Counts')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   },
   {
    "metadata": {},
