--- a/notebooks/figure files/figure 3d/figure 3d plot.ipynb
+++ b/notebooks/figure files/figure 3d/figure 3d plot.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-01T16:22:58.961914Z",
-     "start_time": "2024-09-01T16:22:58.615810Z"
+     "end_time": "2024-09-18T07:30:02.489726Z",
+     "start_time": "2024-09-18T07:30:02.073776Z"
     }
    },
    "source": [
@@ -15,38 +15,70 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib qt"
    ],
-   "execution_count": 1,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T16:22:58.977830Z",
-     "start_time": "2024-09-01T16:22:58.962903Z"
+     "end_time": "2024-09-18T07:38:36.839449Z",
+     "start_time": "2024-09-18T07:38:36.819772Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "Vacanxy_mean_ratio = np.load('Vacanxy_mean_ratio.npy')\n",
-    "std_dev = np.load('Vacanxy_std_dev.npy')\n",
-    "mats = ['Ti','V','Mn','Co']\n",
-    "x_positions = np.arange(len(mats))"
+    "Ti_vac_density = np.array([3.38,6.24,4.22,2.43,6.34,4.36,6.71,4.12])\n",
+    "V_vac_density = np.array([3.39,7.57,3.13,1.48,3.66,2.48,2.21,1.55,3.90])\n",
+    "Mn_vac_density = np.array([2.45,3.53,2.38,4.51,1.77])\n",
+    "Co_vac_density = np.array([1.93,1.41,2.04,1.35,2.16,3.26,3.33])"
    ],
-   "id": "61bce0be650548f1",
-   "execution_count": 2,
-   "outputs": []
+   "id": "3b914cb2fbd1693e",
+   "outputs": [],
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T16:22:59.711723Z",
-     "start_time": "2024-09-01T16:22:58.997279Z"
+     "end_time": "2024-09-18T07:38:37.290773Z",
+     "start_time": "2024-09-18T07:38:37.285789Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "ratio_mean = [np.mean(Ti_vac_density),np.mean(V_vac_density),np.mean(Mn_vac_density),np.mean(Co_vac_density)]\n",
+    "ratio_std = [np.std(Ti_vac_density),np.std(V_vac_density),np.std(Mn_vac_density),np.std(Co_vac_density)]"
+   ],
+   "id": "3820a801261dfa9f",
+   "outputs": [],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-18T07:38:37.741710Z",
+     "start_time": "2024-09-18T07:38:37.733739Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "mats = ['Ti','V','Mn','Co']\n",
+    "x_positions = np.arange(len(mats))"
+   ],
+   "id": "61bce0be650548f1",
+   "outputs": [],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-18T07:38:38.582277Z",
+     "start_time": "2024-09-18T07:38:38.055979Z"
     }
    },
    "cell_type": "code",
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.errorbar(x_positions, Vacanxy_mean_ratio, yerr=std_dev, fmt='o-', capsize=5)\n",
+    "ax.errorbar(x_positions, ratio_mean, yerr=ratio_std, fmt='o-', capsize=5)\n",
     "ax.set_xticks(x_positions)\n",
     "ax.set_xticklabels(mats)\n",
     "ax.set_ylim(0, 8)\n",
@@ -56,16 +88,8 @@
     "plt.savefig('figure 3d new Average Desntiy of Vacancy Trend.png',dpi = 700,transparent=True)"
    ],
    "id": "7ac476b7d1dbbe27",
-   "execution_count": 3,
-   "outputs": []
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "execution_count": null,
-   "source": "",
-   "id": "f913a8f6ebbf2d68",
-   "outputs": []
+   "outputs": [],
+   "execution_count": 22
   }
  ],
  "metadata": {
